--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [project]
-name = "comfyui-flux-outpainting-nf4"
+name = "comfyui-flux-inpainting"
 description = ""
 version = "1.0.0"
 license = {file = "LICENSE"}
 
 [project.urls]
-Repository = "https://github.com/rubi-du/ComfyUI-Flux-Outpainting-nf4"
+Repository = "https://github.com/rubi-du/ComfyUI-Flux-Inpainting.git"
 #  Used by Comfy Registry https://comfyregistry.org
 
 [tool.comfy]
 PublisherId = ""
-DisplayName = "ComfyUI-Flux-Outpainting-nf4"
+DisplayName = "ComfyUI-Flux-Inpainting"
 Icon = ""
